tests/ui/derived-errors/issue-31997.stderr
error[E0425]: cannot find function `bar` in this scope
  --> $DIR/issue-31997.rs:14:16
   |
LL |     closure(|| bar(core::ptr::null_mut()))?;
   |                ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
